--- a/client/public/Comments.html
+++ b/client/public/Comments.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
 
-    <script src="js/script.js"></script>
+    <script src="js/Comments.js"></script>
     <link rel="stylesheet" href="Comments.css">
   </head>
   <body>
