Fixed typo in cart table

--- a/server/public/cart.html
+++ b/server/public/cart.html
@@ -112,7 +112,7 @@
                     <div>
                         <h3>Item Name: ${merchandise[0].item_name}</h3>
                         <p>Price: $${merchandise[0].price}</p>
-                        <p>Quantity: ${item.quanitity}</p>
+                        <p>Quantity: ${item.quantity}</p>
                         <p>Time Added: ${new Date(item.time_added).toLocaleString()}</p>
                         <p>Active: ${item.is_active ? 'Yes' : 'No'}</p>
                         </div>
