--- a/server/public/cart.html
+++ b/server/public/cart.html
@@ -47,6 +47,7 @@
 
 <div> <h2 id="cart-counter"> </h2> </div>
 <div id="cart-items"></div> 
+<div> <h2 id="total-price"> </h2> </div>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -87,6 +88,15 @@
         await fetchCartItems();
     };
 
+    const purchaseCartItems = async () => {
+        const response = await fetch(`/admin/cart/getItems/${username}`);
+        const items = await response.json();
+        for (const item of items) {
+            await removeItem(item.cart_id);
+        }
+        await fetchCartItems();
+    };
+
     const fetchCartItems = async () => {
         const response = await fetch(`/admin/cart/getItems/${username}`);
         const items = await response.json();           
@@ -102,6 +112,7 @@
     const renderCartItems = async (items) => {
         const cartItemsContainer = document.getElementById("cart-items");
         cartItemsContainer.innerHTML = "";
+        let totalPrice = 0;
         if (items.length === 0) {
             cartItemsContainer.innerHTML = "<p>Your cart is empty.</p>";
         } else {
@@ -113,15 +124,19 @@
                         <h3>Item Name: ${merchandise[0].item_name}</h3>
                         <p>Price: $${merchandise[0].price}</p>
                         <p>Quantity: ${item.quantity}</p>
-                        <p>Time Added: ${new Date(item.time_added).toLocaleString()}</p>
-                        <p>Active: ${item.is_active ? 'Yes' : 'No'}</p>
                         </div>
                         <button onclick="removeItem(${item.cart_id})">Delete</button>
                     </div>
                 `;
+                totalPrice += merchandise[0].price * item.quantity;
                 cartItemsContainer.innerHTML += itemHTML;
             }
         }
+        const totalPriceElement = document.getElementById("total-price");
+        totalPriceElement.innerHTML = `
+        <p>Total Price: $${totalPrice.toFixed(2)}
+        <button onclick="purchaseCartItems()">Purchase</button></p>
+    `;;
         const itemCountElement = document.getElementById("cart-counter");
         itemCountElement.textContent = `Total Items: ${items.length}`;
     };
