--- a/server/public/shop.html
+++ b/server/public/shop.html
@@ -46,6 +46,8 @@
     <p>Add gift shop functionality to this page</p>
 </div>
 
+<div id="merchandise"></div>
+
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         async function fetchUserData(username) {
@@ -63,7 +65,6 @@
                 alert('An error occurred while fetching user data.');
             }
         }
-
         const username = window.location.pathname.split('/').pop();
         if (username) {
             fetchUserData(username);
@@ -75,6 +76,47 @@
             document.getElementById('accountButton').href = `/account/${username}`;
         } else {
             alert('Username not provided in URL.');
+        }
+    });
+    document.addEventListener("DOMContentLoaded", async function() {
+        try {
+            const response = await fetch(`/admin/merchandise/getItems`);
+            const items = await response.json();
+            const merchandise = document.getElementById("merchandise");
+            items.forEach(item => {
+                const list = document.createElement("li");
+
+                const itemNameAndPrice = document.createElement("span");
+                itemNameAndPrice.textContent = `${item.item_name} - $${item.price}`;
+                list.appendChild(itemNameAndPrice);
+
+                const space = document.createTextNode(" ");
+                list.appendChild(space);
+
+                const quantityInput = document.createElement("input");
+                quantityInput.type = "number";
+                quantityInput.value = 1;
+                quantityInput.min = 1;
+                quantityInput.max = item.number_in_stock; // Set the maximum quantity available
+                list.appendChild(quantityInput);
+
+                const purchaseButton = document.createElement("button");
+                purchaseButton.textContent = "Purchase";
+                purchaseButton.addEventListener("click", async () => {
+                    try {
+                        const username = window.location.pathname.split('/').pop();
+                        const itemId = item.item_id;
+                        const quantity = parseInt(quantityInput.value);
+                        const response = await fetch(`/admin/cart/addItem/${username}/${itemId}/${quantity}`);
+                    } catch (error) {
+                        console.error("Error purchasing item:", error);
+                    }
+                });
+                list.appendChild(purchaseButton);
+                merchandise.appendChild(list);
+            });
+        } catch (error) {
+            console.error("Error fetching data:", error);
         }
     });
 </script>
