--- a/server/public/shop.html
+++ b/server/public/shop.html
@@ -96,7 +96,7 @@
                 quantityInput.type = "number";
                 quantityInput.value = 1;
                 quantityInput.min = 1;
-                quantityInput.max = item.number_in_stock; // Set the maximum quantity available
+                quantityInput.max = item.number_in_stock;
                 list.appendChild(quantityInput);
 
                 const purchaseButton = document.createElement("button");
