--- a/server/public/tickets.html
+++ b/server/public/tickets.html
@@ -27,12 +27,19 @@
         .header-buttons:hover {
             background-color: #777;
         }
+
         .container {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
-        .box {
+        .box-container {
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+            margin-bottom: 20px;
+        }
+        .area {
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -42,6 +49,22 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        .box {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 48%; /* Adjust this value as needed */
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .box:nth-child(odd) {
+            background-color: yellow; 
+        }
+        .box:nth-child(even) {
+            background-color: rgb(73, 208, 231);
+        }
         .button {
             padding: 10px 20px;
             background-color: #007bff;
@@ -49,6 +72,18 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            text-decoration: none;
+        }
+        .perks {
+            text-decoration: underline;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        h2 {
+            margin-bottom: 10px; /* Decrease the bottom margin of the heading */
+        }
+        ul {
+            margin-top: 5px; /* Decrease the top margin of the list */
         }
     </style>
 </head>
@@ -66,20 +101,38 @@
 
 <div>
     <h1 id="welcomeMessage">Welcome to our Tickets page!</h1>
-    <p>Add purchasing tickets to this page</p>
 </div>
 <div class="container">
-    <div class="box">
+    <div class="area">
         <div>
             <p>Look at previously purchased tickets</p>
         </div>
         <div>
-            <a href="#" class="button" id="purchasedTickets">Purchased Tickets</a>
+            <a href="#" class="button" id="purchasedButton">Purchased Tickets</a>
         </div>
     </div>
     <div>
         <h2>Purchase New Tickets</h2>
-        <!-- Add your content for purchasing new tickets here -->
+    </div>
+    <div class="box-container">
+        <div class="box">
+            <h2>Fast Pass</h2>
+            <ul>
+                <li>Priority Access</li>
+                <li>Exclusive Entry</li>
+                <li>Special Seating</li>
+            </ul>
+            <a href="#" class="button" id="fastPastButton">Get Fast Pass</a>
+        </div>
+        <div class="box">
+            <h2>General Admission</h2>
+            <ul>
+                <li>Standard Access</li>
+                <li>First Come, First Serve</li>
+                <li>Regular Seating</li>
+            </ul>
+            <a href="#" class="button" id="generalButton">Get General Admission</a>
+        </div>
     </div>
 </div>
 
@@ -110,7 +163,10 @@
             document.getElementById('giftShopButton').href = `/shop/${username}`;
             document.getElementById('cartButton').href = `/cart/${username}`;
             document.getElementById('accountButton').href = `/account/${username}`;
-            document.getElementById('purchasedTickets').href = `/tickets/purchased/${username}`;
+            document.getElementById('purchasedButton').href = `/tickets/purchased/${username}`;
+            document.getElementById('generalButton').href = `/tickets/General Admission/${username}`;
+            document.getElementById('fastPastButton').href = `/tickets/Fast Past/${username}`;
+            
         } else {
             alert('Username not provided in URL.');
         }
