Added some style changes (color, margins, images, etc)

--- a/server/public/cart.html
+++ b/server/public/cart.html
@@ -27,6 +27,15 @@
         .header-buttons:hover {
             background-color: #777;
         }
+
+        body {
+            background-color: rgb(221, 220, 220);
+            color:  rgb(221, 220, 220);
+        }
+
+        .body-text {
+            color: rgb(0, 0, 0);
+        }
     </style>
 </head>
 <body>
@@ -41,13 +50,13 @@
     <a href="/" class="header-buttons">Log Out</a>
 </header>
 
-<div>
+<div class="body-text">
     <h1 id="welcomeMessage">Your Cart: </h1>
 </div>
 
-<div> <h2 id="total-price"> </h2> </div>
-<div> <h3 id="cart-counter"> </h3> </div>
-<div id="cart-items"></div> 
+<div class="body-text"> <h2 id="total-price"> </h2> </div>
+<div class="body-text"> <h3 id="cart-counter"> </h3> </div>
+<div class="boydy-text" id="cart-items"></div> 
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
