--- a/server/public/home.html
+++ b/server/public/home.html
@@ -27,6 +27,15 @@
         .header-buttons:hover {
             background-color: #777;
         }
+
+        body {
+            background-color: rgb(221, 220, 220);
+            color:  rgb(221, 220, 220);
+        }
+
+        .body-text {
+            color: rgb(0,0,0);
+        }
     </style>
 </head>
 <body>
@@ -42,8 +51,8 @@
 </header>
 
 <div>
-    <h1 id="welcomeMessage">Welcome to our Home page!</h1>
-    <p>This is just a welcome screen saying hello to guests.</p>
+    <h1 class="body-text" id="welcomeMessage">Welcome to our Home page!</h1>
+    <p class="body-text">This is just a welcome screen saying hello to guests.</p>
 </div>
 
 <script>
