--- a/server/public/tickets.html
+++ b/server/public/tickets.html
@@ -27,6 +27,15 @@
         .header-buttons:hover {
             background-color: #777;
         }
+
+        body {
+            background-color: rgb(221, 220, 220);
+            color:  rgb(221, 220, 220);
+        }
+
+        .body-text {
+            color: rgb(0, 0, 0);
+        }
     </style>
 </head>
 <body>
@@ -41,7 +50,7 @@
     <a href="/" class="header-buttons">Log Out</a>
 </header>
 
-<div>
+<div class="body-text">
     <h1 id="welcomeMessage">Welcome to our Tickets page!</h1>
     <p>Add purchasing tickets to this page</p>
 </div>
