--- a/server/public/account.html
+++ b/server/public/account.html
@@ -32,16 +32,27 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+            color: rgb(0, 0, 0);
         }
 
         th, td {
             padding: 10px;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #6a6a6a;
         }
 
         th {
-            background-color: #f2f2f2;
+            background-color: #959595;
         }
+
+        body {
+            background-color: rgb(221, 220, 220);
+            color:  rgb(221, 220, 220);
+        }
+
+        .body-text {
+            color: rgb(0, 0, 0);
+        }
+
     </style>
 </head>
 <body>
@@ -56,7 +67,7 @@
     <a href="/" class="header-buttons">Log Out</a>
 </header>
 
-<div>
+<div class="body-text">
     <h1 id="welcomeMessage">User Account: </h1>
 </div>
 <div class="container">
