Updated add to cart button

--- a/server/public/shop.html
+++ b/server/public/shop.html
@@ -110,7 +110,7 @@
                 list.appendChild(quantityInput);
 
                 const purchaseButton = document.createElement("button");
-                purchaseButton.textContent = "Purchase";
+                purchaseButton.textContent = "Add to cart";
                 purchaseButton.addEventListener("click", async () => {
                     try {
                         const username = window.location.pathname.split('/').pop();
