Update cart page color issue

--- a/server/public/cart.html
+++ b/server/public/cart.html
@@ -36,6 +36,10 @@
         .body-text {
             color: rgb(0, 0, 0);
         }
+
+        .cart-item {
+            color: rgb(0, 0, 0);
+        }
     </style>
 </head>
 <body>
